finally realized why I constantly have more headers saved that I didn't save and why it's worse now that I have Enter for Search and Jump: it's because I don't have a submit button on the form and the first button is being used as a submit button. The first button was the one to add a new header. Fixed it by having the first button be a submit button that always returns false, is not visible when printed, and is off-screen so not visible anywhere. So, the default action on pressing enter is to do nothing, which is what I wanted in the first place. Still can Search or Jump by pressing enter if in the appropriate input fields.

--- a/data/rentap-screen.css
+++ b/data/rentap-screen.css
@@ -1,3 +1,4 @@
+.defaultsink {position: absolute; left: -100%;}
 #rentapheader {min-width: 1280px; margin:0px}
 #headercontrols {min-width: 250px; max-width: 250px}
 #controls, #headercontrols {margin-left:20px; padding-left:20px;}
